# aXplorience

./: .gitignore  AndroidManifest.xml  README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/nclozer/: AtlasMonoNum.rtx  Debug.vert  Label.frag  Label.vert  POI.vert  Preview.vert
app/src/main/cpp/include/nclozer/: NCommon.cpp  NConcurrentQueue.h  NElement.cpp  NVisitor.cpp  NWrapper.h
app/src/main/cpp/include/nclozer/db/: DBCommon.h  DBFile.h  DBHandler.cpp
app/src/main/cpp/include/nclozer/graphics/: GraphicsHandler.cpp
app/src/main/cpp/include/nclozer/nkross/: NKrossCommon.h
app/src/main/cpp/include/nclozer/nkross/device/app/: Activity.h  Application.h  FragmentManager.h  FragmentTransaction.h
app/src/main/cpp/include/nclozer/nkross/device/bluetooth/: BluetoothAdapter.cpp  BluetoothGattCallback.h  BluetoothGattServer.h  BluetoothManager.h  BluetoothServerSocket.cpp  BluetoothServerSocket.h
app/src/main/cpp/include/nclozer/nkross/device/bluetooth/le/: AdvertiseData.h  AdvertiseSettings.h  BluetoothLeAdvertiser.h  BluetoothLeScanner.h  ScanCallback.h  ScanRecord.h
app/src/main/cpp/include/nclozer/nkross/device/graphics/: SurfaceTexture.h  Typeface.cpp  Typeface.h
app/src/main/cpp/include/nclozer/nkross/device/graphics/drawable/: ColorDrawable.h
app/src/main/cpp/include/nclozer/nkross/device/hardware/: Camera.cpp
app/src/main/cpp/include/nclozer/nkross/device/io/: InputStream.h
app/src/main/cpp/include/nclozer/nkross/device/lang/: object.h
app/src/main/cpp/include/nclozer/nkross/device/location/: Location.h  LocationManager.cpp
app/src/main/cpp/include/nclozer/nkross/device/microedition/khronos/egl/: EGLSurface.h
app/src/main/cpp/include/nclozer/nkross/device/os/: BaseBundle.h  Build.h  Bundle.h  Looper.h
app/src/main/cpp/include/nclozer/nkross/device/text/: InputType.h
app/src/main/cpp/include/nclozer/nkross/device/util/: DisplayMetrics.h  UUID.h
app/src/main/cpp/include/nclozer/nkross/device/view/: ContextThemeWrapper.h  GestureDetector.cpp  Gravity.h  LayoutInflater.h  Surface.h  ViewGroup.cpp  WindowManager.h
app/src/main/cpp/include/nclozer/nkross/device/view/inputmethod/: EditorInfo.h
app/src/main/cpp/include/nclozer/nkross/device/widget/: BaseAdapter.h  CompoundButton.h  ToggleButton.h
app/src/main/cpp/include/nclozer/nkross/os/: android.cpp
app/src/main/cpp/include/nclozer/nkross/visitor/: NVisitorApp.h  NVisitorAppFragment.h  NVisitorContentRes.h  NVisitorHardware.h  NVisitorOS.h  NVisitorOpengl.h  NVisitorUtil.h  NVisitorView.h  NVisitorViewView.h  NVisitorWidget.h  NVisitorWidgetLayout.h  NVisitorWidgetView.h
app/src/main/cpp/include/nclozer/op/: OpCommon.h  OpParam.cpp  OpSquad.cpp  OpUnit.h  OpWrapper.h
app/src/main/cpp/src/: AREngine.h  BOMessage.cpp  BOMessage.h  BOPOI.h  FragmentLevel1.cpp  FragmentLevel1.h  FragmentLevel2.cpp  FragmentViewAR.cpp  FragmentViewAR.h  FragmentViewEdit.h  FragmentViewHome.cpp  FragmentViewHome.h  FragmentViewSettings.h  NActivity.cpp  OpUnitAnim.cpp  OpUnitAnim.h  OpUnitCore.cpp  OpUnitEvents.cpp  OpUnitEvents.h  OpUnitListener.cpp  OpUnitPeer.cpp  OpUnitServer.cpp  OpUnitServer.h  OpUnitUI.cpp  OpUnitUI.h  Tables.h  WidgetAR.h  WidgetHome.cpp  WidgetMessage.cpp  WidgetSettings.cpp  WidgetSettings.h  Wrapper.h
app/src/main/java/y/b/: INVisitor.java  ITVisitor.java  TAdvertiseCallback.java  TAndroid.java  TBaseAdapter.java  TEGLSurface.java  TFragment.java  TOnClickListener.java  TOnFrameAvailableListener.java  TOnGestureListener.java  TOnItemClickListener.java  TRenderer.java  TSurfaceHolderCallback.java  TVisitorApp.java  TVisitorAppFragment.java  TVisitorContentRes.java  TVisitorIO.java  TVisitorLocation.java  TVisitorOS.java  TVisitorUtil.java  TVisitorViewViewGroup.java  TVisitorWidget.java  TVisitorWidgetLayout.java  TVisitorWidgetView.java  TWrapper.java
app/src/main/res/values/: strings.xml
app/src/main/res/values-v11/: styles.xml
assets/nclozer/: CameraPreview.frag  CameraPreview.vert  Debug.frag  Debug.vert  Label.vert  POI.frag  POI.vert  Preview.frag  poi.csv
jni/: Android.mk  Application.mk  BO.h  BOMessage.cpp  BOMessage.h  CircularConcurrentList.h  Clozer.h  Common.h  ConcurrentCircularBuffer.h  ConcurrentQueue.h  FragmentLevel.cpp  FragmentLevel.h  FragmentLevel0.cpp  FragmentLevel0.h  FragmentLevel1.cpp  FragmentLevel1.h  FragmentLevel2.cpp  FragmentLevel2.h  FragmentView.h  FragmentViewAbout.cpp  FragmentViewAbout.h  FragmentViewDetails.cpp  FragmentViewDetails.h  FragmentViewEdit.cpp  FragmentViewEdit.h  FragmentViewHome.cpp  FragmentViewHome.h  FragmentViewSettings.cpp  FragmentViewSettings.h  JavaBBBinder.txt  MyApplication.cpp  MyApplication.h  NAPI.cpp  NAPI.h  NActivity.cpp  NActivity.h  NBufferLong.cpp  NBufferLong.h  NClozer.cpp  NClozer.h  (+58 more)
jni/app/: Activity.h
jni/content/: Context.h  ContextWrapper.h
jni/db/: DBFile.cpp  DBFile.h  DBHandler.cpp  DBHandler.h  DBTable.cpp  DBTable.h
jni/device/: R.h
jni/native/: NAPI.cpp  NAPI.h  NArray.h  NClozer.cpp  NClozer.h  NCommon.h  NElement.cpp  NElement.h  NFrame.cpp  NFrame.h  NNoObject.h  NParamBox.cpp  NParamBox.h  NVisitor.cpp  NVisitor.h  NVisitorApp.h  NVisitorAppActivity.h  NVisitorAppFragment.h  (+18 more)
(+405 files in other folders)
